--- a/css/style.css
+++ b/css/style.css
@@ -50,13 +50,16 @@ body {
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
+    backface-visibility: hidden;
 }
 
 .heading-primary-main {
     display: block;
     font-size: 60px;
     font-weight: 400;
-    letter-spacing: 35px
+    letter-spacing: 35px;
+
+    animation: moveInLeft 1s ease-out;
 }
 
 .heading-primary-sub {
@@ -64,6 +67,8 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.4px;
+
+    animation: moveInRight 1s ease-out;
 }
 
 .text-box {
@@ -73,6 +78,37 @@ body {
     transform: translate(-50%, -50%);
 }
 
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    80% {
+        transform: translateX(15px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+
+    80% {
+        transform: translateX(-15px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
 
 
 
