--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,8 @@ body {
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 60px;
+
+    backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -109,6 +111,20 @@ body {
     100% {
         opacity: 1;
         transform: translate(0);
+        
+    }
+}
+
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+        display: inline-block;
     }
 }
 
@@ -120,6 +136,8 @@ body {
     border-radius: 200px;
     display: inline-block;
     transition: all .2s;
+    position: relative;
+
 }
 .btn:hover {
     transform: translateY(-3px);
@@ -133,13 +151,34 @@ body {
 
 .btn-white {
     background-color: #fff;
-    color: #777;
-    border: 1px solid #fff;
+    color: #777;  
 }
 
-.heading-primary a {
-    margin: 50px auto;
+.btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 200px; 
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
 }
 
+.btn-white::after {
+    background-color: #fff;
+}
+
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.7);
+    opacity: 0;
+}
+
+.btn-animated {
+    animation: moveInBottom 1s ease-out .75s;
+    animation-fill-mode: backwards;
+}
 
 
