--- a/css/style.css
+++ b/css/style.css
@@ -7,20 +7,22 @@ Dark green: #28b485
 
 */
 
-* {
+*,
+*::after,
+*::before {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
+html { font-size: 62.5%; }
 
 body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    font-size: 16px;
     line-height: 1.7;
     color: #777;
-    padding: 30px;
-
+    padding: 3rem;
+    box-sizing: border-box;
 }
 
 .header {
@@ -39,37 +41,36 @@ body {
 
 .logo-box {
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 4rem;
+    left: 4rem;
 }
 
 .logo {
-    height: 35px;
+    height: 3.5rem;
 }
 
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
-    backface-visibility: hidden;
-    margin-bottom: 60px;
+    margin-bottom: 6rem;
 
     backface-visibility: hidden;
 }
 
 .heading-primary-main {
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
 
     animation: moveInLeft 1s ease-out;
 }
 
 .heading-primary-sub {
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 17.4px;
+    letter-spacing: 1.75rem;
 
     animation: moveInRight 1s ease-out;
 }
@@ -85,11 +86,11 @@ body {
 @keyframes moveInLeft {
     0% {
         opacity: 0;
-        transform: translateX(-100px);
+        transform: translateX(-10rem);
     }
 
     80% {
-        transform: translateX(15px);
+        transform: translateX(1.5rem);
     }
 
     100% {
@@ -101,11 +102,11 @@ body {
 @keyframes moveInRight {
     0% {
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(10rem);
     }
 
     80% {
-        transform: translateX(-15px);
+        transform: translateX(-1.5rem);
     }
 
     100% {
@@ -118,7 +119,7 @@ body {
 @keyframes moveInBottom {
     0% {
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(3rem);
     }
 
     100% {
@@ -132,12 +133,12 @@ body {
 .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
-    border-radius: 200px;
+    padding: 1.5rem 4rem;
+    border-radius: 20rem;
     display: inline-block;
     transition: all .2s;
     position: relative;
-
+    font-size: 1.6rem;
 }
 .btn:hover {
     transform: translateY(-3px);
@@ -159,7 +160,7 @@ body {
     display: inline-block;
     height: 100%;
     width: 100%;
-    border-radius: 200px; 
+    border-radius: 20rem; 
     position: absolute;
     top: 0;
     left: 0;
