--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,11 +1,17 @@
 //COLORS
-$color-primary: #7ed56f;
-$color-primary-light:#55c57a;
-$color-primary-dark: #28b485;
+$color-primary:#55c57a;
+$color-primary-light:#7ed56f;
+$color-primary-dark:#28b485;
+
+$color-grey-light-1: #f7f7f7;
+
 
 $color-white: #fff;
 $color-grey-dark: #777;
 $color-black: #000;
+
+//FONTS
+$default-font-size: 1.6rem;
 
 
 //GRID
