--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ body {
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
     border-radius: 3px;
     position: absolute;
-    transition: all .3s;
+    transition: all .2s;
     z-index: 10;
     outline-offset: 2rem; }
     .composition__photo--1 {
@@ -183,12 +183,29 @@ body {
       top: 4rem;
       right: 0; }
     .composition__photo:hover {
-      transform: scale(1.05);
+      transform: scale(1.05) translateY(0.5rem);
       box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.5);
       outline: 1.5rem solid #55c57a;
       z-index: 20; }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
+
+.feature-box {
+  height: 40rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.15);
+  transition: transform .2s; }
+  .feature-box__icon {
+    font-size: 6rem;
+    background-image: linear-gradient(to right, #7ed56f, #28b485);
+    -webkit-background-clip: text;
+    color: transparent; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.03); }
 
 .row {
   max-width: 114rem;
@@ -240,3 +257,12 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+
+.section-features {
+  padding: 20rem 0;
+  margin-top: -10rem;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg);
+  background-size: cover;
+  transform: skewY(-7deg); }
+  .section-features > * {
+    transform: skewY(7deg); }
