--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -27,7 +27,7 @@
         }
 
         &:hover {
-            transform: scale(1.05) translateY(.5rem)
+            transform: scale(1.05) translateY(.5rem);
             box-shadow: 0 2rem 4rem rgba($color-black, .5);
             outline: 1.5rem solid $color-primary;
             z-index: 20;
