--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -5,3 +5,10 @@
     clear: both;
    }   
 }
+
+@mixin card__side-properities {
+   position: absolute;
+   top: 0;
+   left: 0;
+   box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+}
