--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -1,7 +1,7 @@
 .story {
     padding: 6rem;
     padding-left: 9rem;
-    background-color: $color-white;
+    background-color: rgba($color-white, .6);
     width: 75%;
     box-shadow: 0 3rem 6rem rgba($color-black, .1);
     margin: 0 auto;
@@ -19,13 +19,43 @@
         transform: translateX(-3rem) skewX(12deg);
         -webkit-shape-outside: circle(50% at 50% 50%);
         shape-outside: circle(50% at 50% 50%);
+        position: relative;
+        overflow: hidden;
+        backface-visibility: hidden;   
     }
 
     &__img {
         height: 100%;
+        transform: translateX(-4rem) scale(1.4);
+        transition: all .5s;
+        backface-visibility: hidden;
     }
 
     &__text {
         transform: skewX(12deg);
+    }
+
+    &__caption {
+        color: $color-white;
+        font-size: 1.7rem;
+        text-transform: uppercase;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 20%);
+        opacity: 0;
+        transition: all .5s;
+        backface-visibility: hidden;
+    }
+
+    &:hover &__caption {
+        transform: translate(-50%, -50%);
+        opacity: 1;
+    }
+
+    &:hover &__img {
+        transform: translateX(-3rem) scale(1);
+        filter: brightness(80%) blur(3px);
     }
 }
