--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,42 @@ body {
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
 
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.form__input {
+  font-size: 1.5rem;
+  font-family: inherit;
+  color: inherit;
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 90%;
+  display: block;
+  padding: 1.5rem 2rem;
+  border: none;
+  border-bottom: 3px solid transparent;
+  border-radius: 2px; }
+  .form__input:focus {
+    outline: none;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+    border-bottom: 3px solid #55c57a; }
+  .form__input::-webkit-input-placeholder {
+    color: #999; }
+  .form__input:focus:invalid {
+    border-bottom: 3px solid #ff7730; }
+
+.form__label {
+  display: block;
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-left: 2rem;
+  margin-top: .7rem;
+  transition: all .3s; }
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4.2rem); }
+
 .story {
   padding: 6rem;
   padding-left: 9rem;
@@ -353,6 +389,7 @@ body {
     height: 100%;
     transform: translateX(-4rem) scale(1.4);
     transition: all .5s;
+    filter: brightness(100%) blur(0);
     backface-visibility: hidden; }
   .story__text {
     transform: skewX(12deg); }
@@ -369,8 +406,8 @@ body {
     transition: all .5s;
     backface-visibility: hidden; }
   .story:hover .story__caption {
-    transform: translate(-50%, -50%);
-    opacity: 1; }
+    opacity: 1;
+    transform: translate(-50%, -50%); }
   .story:hover .story__img {
     transform: translateX(-3rem) scale(1);
     filter: brightness(80%) blur(3px); }
@@ -444,3 +481,17 @@ body {
 .section-stories {
   position: relative;
   padding: 15rem 0; }
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+
+.book {
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
+  background-size: cover;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
+  height: 50rem; }
+  .book__form {
+    padding: 6rem;
+    width: 50%; }
