--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -9,6 +10,11 @@
         transition: all .2s;
         position: relative;
         font-size: $default-font-size;
+
+        //Change for <button> element
+
+        border: none;
+        cursor: pointer;
     }
     &:hover {
         transform: translateY(-3px);
