--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -17,6 +17,7 @@
         border: none;
         border-bottom: 3px solid transparent;
         border-radius: 2px;
+        transition: all .3s;
 
         &:focus {
             outline: none;
@@ -44,5 +45,52 @@
         opacity: 0;
         visibility: hidden;
         transform: translateY(-4.2rem);
+    }
+
+    &__radio-group {
+        width: 49%;
+        display: inline-block;
+        padding-left: 2rem;
+    }
+
+    &__radio-input {
+        display: none;
+    }
+
+    &__radio-label {
+        font-size: $default-font-size;
+        cursor: pointer;
+        position: relative;
+        padding-left: 5rem;
+    }
+
+    &__radio-button {
+        height: 3rem;
+        width: 3rem;
+        border: 5px solid $color-primary;
+        border-radius: 50%;
+        display: inline-block;
+        position: absolute;
+        top: -.4rem;
+        left: 0;
+
+        &::after {
+            content: "";
+            height: 1.3rem;
+            width: 1.3rem;
+            display: block;
+            background-color: $color-primary;
+            border-radius: 50%;
+            position: absolute;
+            top:50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            opacity: 0;
+            transition: opacity .2s;
+        }
+    }
+
+    &__radio-input:checked + &__radio-label &__radio-button::after {
+        opacity: 1
     }
 }
