--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -20,11 +20,12 @@
         transform: translateY(-3px);
         box-shadow: 0 10px 20px rgba($color-black, 0.2);
 
-        &::after {
+    }
+
+    &:hover::after {
             transform: scaleX(1.4) scaleY(1.7);
             opacity: 0;
         }
-    }
 
     &:active {
         transform: translateY(-1px);
