--- a/css/style.css
+++ b/css/style.css
@@ -563,15 +563,17 @@ body {
   top: 6.5rem;
   right: 6.5rem;
   z-index: 1000;
-  transform: scale(80); }
+  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
 
 .navigation__nav {
+  opacity: 0;
+  width: 0;
   height: 100vh;
-  width: 100%;
   position: fixed;
   top: 0;
-  right: 0;
-  z-index: 1500; }
+  left: 0;
+  z-index: 1500;
+  transition: all 0.8s cubic-bezier(0.48, 0.08, 0.48, 1.34); }
 
 .navigation__list {
   list-style: none;
@@ -602,6 +604,13 @@ body {
   background-position: 100%;
   color: #55c57a;
   transform: translateX(1rem); }
+
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(80); }
+
+.navigation__checkbox:checked ~ .navigation__nav {
+  opacity: 1;
+  width: 100%; }
 
 .section-about {
   background-color: #f7f7f7;
