--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -4,6 +4,7 @@
         display: none;
     }
 
+
     &__button {
         height: 7rem;
         width: 7rem;
@@ -26,16 +27,20 @@
         right: 6.5rem;
         z-index: 1000;
 
-        transform: scale(80);
+        transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
+
     }
 
     &__nav {
+        opacity: 0;
+        width: 0;
         height: 100vh;
-        width: 100%;
         position: fixed;
         top: 0;
-        right: 0;
+        left: 0;
         z-index: 1500;
+        
+        transition: all .8s cubic-bezier(.48,.08,.48,1.34);
     }
 
     &__list {
@@ -77,5 +82,14 @@
             transform: translateX(1rem);
         }
         
+    }
+
+    &__checkbox:checked ~ &__background {
+        transform: scale(80);
+    }
+
+    &__checkbox:checked ~ &__nav {
+        opacity: 1;
+        width: 100%;
     }
 }
