--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -14,7 +14,9 @@
         top: 6rem;
         right: 6rem;
         z-index: 2000;
-        
+        text-align: center;
+        cursor: pointer;
+        box-shadow: 0 1rem 3rem rgba($color-black, .3);
     }
 
     &__background {
@@ -91,5 +93,52 @@
     &__checkbox:checked ~ &__nav {
         opacity: 1;
         width: 100%;
+    }
+
+    &__icon {
+        position: relative;
+        margin-top: 3.5rem;
+        
+
+        &,
+        &::before,
+        &::after {
+            width: 3rem;
+            height: 2.5px;
+            background-color: $color-grey-dark-3;
+            display: inline-block;
+        }
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            transition: transform .2s;
+        }
+
+        &::before {top: -.8rem;}
+        &::after {top: .8rem;}
+
+    }
+
+    &__button:hover &__icon {
+
+        &::before { top: -1rem; }
+        &::after { top: 1rem; }
+    }
+    
+
+    &__checkbox:checked + &__button &__icon {
+        background-color: transparent;
+
+        &::before { 
+            transform: rotate(135deg);
+            top: 0;
+        }
+        &::after { 
+            transform: rotate(-135deg);
+            top: 0;
+        }
     }
 }
