--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -6,6 +6,19 @@
     height: 100vh;
     width: 100%;
     z-index: 9999;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .3s;
+
+    &:target {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    &:target &__content {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
 
     &__content {
         width: 75%;
@@ -17,7 +30,10 @@
         box-shadow: 0 2rem 4rem rgba($color-black, .2); 
         border-radius: 3px;
         display: table;  
-        overflow: hidden;  
+        overflow: hidden; 
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(.2); 
+        transition: all .5s .2s;
     }
 
     &__img {
@@ -45,5 +61,24 @@
         column-rule: 1px solid $color-grey-light-2;
         -webkit-hyphens: auto;
         hyphens: auto;
+    }
+
+    &__close {
+        
+        &:link,
+        &:visited {
+            position: absolute;
+            top: 2.5rem;
+            right: 2.5rem;
+            font-size: 4rem;
+            text-decoration: none;
+            color: $color-grey-dark;
+            line-height: 1;
+        }
+
+        &:hover {
+            color: $color-primary;
+        }
+        
     }
 }
