--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -14,9 +14,12 @@
         margin-bottom: 3rem  !important;
     }
 }
-.u-margin-bottom-small { margin-bottom: 2rem  !important;
+.u-margin-bottom-small { 
+    margin-bottom: 2rem  !important;
     
-    
+    @include respond(phone) {
+        margin-bottom: 1rem  !important;
+    }   
 }
 
 .u-margin-top-big { margin-top: 8rem  !important; }
