--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -11,17 +11,21 @@
         width: 100%;
         border-radius: 3px;
         overflow: hidden;
+        position: absolute;
+        top: 0;
+        left: 0;
+       
         
 
         &--front {
             background-color: $color-white;
-            @include card__side-properities;
+            box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
         }
 
         &--back {
             
             transform: rotateY(180deg);
-            @include card__side-properities;
+            box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 
             &-1 {
                 background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
@@ -139,4 +143,51 @@
         font-size: 6rem;
         font-weight: 100;
     }
+
+    @include respond(tab-port) {
+        height: auto;
+        border-radius: 3px;
+        background-color: $color-white;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+        &__side {
+            height: auto;
+            position: relative;
+            
+            &--front {
+                box-shadow: none;
+            }
+
+            &--back {    
+                box-shadow: none;    
+                transform: rotateY(0);  
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);            
+            }
+        }
+
+        &__details { padding: 1rem 3rem; }
+        
+        &:hover &__side { 
+            &--front  { transform: rotateY(0); }
+        }
+
+        &__cta {
+            padding: 7rem 4rem 4rem 4rem;
+            position: relative;
+            top: 0;
+            left: 0;
+            transform: translate(0);
+            width: 100%;
+        }
+
+        &__price-box { margin-bottom: 3rem; }
+
+        &__price-only { font-size: 1.4rem; }
+
+        &__price-value { font-size: 4rem; }
+
+    }
+
+
+
 }
