--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -19,6 +19,10 @@
         border-radius: 2px;
         transition: all .3s;
 
+        @include respond(tab-port) {
+            width: 100%;
+        }
+
         &:focus {
             outline: none;
             box-shadow: 0 1rem 2rem rgba($color-black, .1);
@@ -51,6 +55,11 @@
         width: 49%;
         display: inline-block;
         padding-left: 2rem;
+
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &__radio-input {
