--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -34,16 +34,36 @@
         opacity: 0;
         transform: translate(-50%, -50%) scale(.2); 
         transition: all .5s .2s;
+
+        @include respond(tab-land) {
+           width: 90%;
+         }
+
+         @include respond(tab-part) {
+             display: block;
+         }
     }
 
     &__img {
         width: 100%;
         display: block;
+
+        @include respond(tab-port) {
+            width: 50%;
+            float: left;
+        }
     }
 
     &__left {
         width: 33.33333%;
         display: table-cell;
+        
+        @include respond(tab-port) {
+            display: block;
+            width: 100%;
+
+            @include clearfix;
+        }
     }
 
     &__right {
@@ -51,6 +71,11 @@
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+
+        @include respond(tab-port) {
+            display: block; 
+            width: 100%;
+        }
     }
 
     &__text {
@@ -61,6 +86,11 @@
         column-rule: 1px solid $color-grey-light-2;
         -webkit-hyphens: auto;
         hyphens: auto;
+
+        @include respond(tab-port) {
+            column-count: 1;
+            margin-bottom: 2rem;
+        }
     }
 
     &__close {
@@ -74,6 +104,11 @@
             text-decoration: none;
             color: $color-grey-dark;
             line-height: 1;
+
+            @include respond(tab-port) {
+                top: 1.5rem;
+                right: 1.5rem;
+            }
         }
 
         &:hover {
