--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -9,7 +9,15 @@
     font-size: $default-font-size;
     transform: skewX(-12deg);
 
-    
+    @include respond(tab-port) {
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem;
+    }
+
+    @include respond(phone) {
+        transform: skewX(0);
+    }
 
     &__shape {
         width: 15rem;
@@ -22,6 +30,10 @@
         position: relative;
         overflow: hidden;
         backface-visibility: hidden;   
+
+        @include respond(phone) {  
+            transform:translateX(-3rem) skewX(0);
+        }
     }
 
     &__img {
@@ -34,6 +46,10 @@
 
     &__text {
         transform: skewX(12deg);
+
+        @include respond(phone) {
+            transform: skewX(0);
+        }
     }
 
     &__caption {
