--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -58,11 +58,26 @@
     background-size: cover;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
-    height: 50rem;
+
+    @include respond(tab-land) {
+        background-image: linear-gradient(105deg, rgba($color-white, .9) 65%, transparent 65%), url(../img/nat-10.jpg);
+    }
+
+    @include respond(tab-port) {
+        background-image: linear-gradient(rgba($color-white, .9), rgba($color-white, .9)), url(../img/nat-10.jpg);
+    }
 
     &__form {
         padding: 6rem;
         width: 50%;
+
+        @include respond(tab-land) {
+            width: 65%;
+        }
+
+        @include respond(tab-port) {
+            width: 100%;
+        }
     }
     
 }
