--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -51,6 +51,7 @@
     }
 
     &__nav {
+        visibility: hidden;
         opacity: 0;
         width: 0;
         height: 100vh;
@@ -109,6 +110,7 @@
 
     &__checkbox:checked ~ &__nav {
         opacity: 1;
+        visibility: visible;
         width: 100%;
     }
 
