--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -14,9 +14,19 @@
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.8), 
-        rgba($color-primary-dark, 0.8) ), 
-        url(../img/nat-4.jpg);
-    background-size: cover;
+        rgba($color-primary-dark, 0.8)), 
+        url(../img/nat-4-small.jpg);
+        background-size: cover;
+
+    @media (min-resolution: 192dpi) and (min-width: 37.5em),
+           (min-width: 2000px) {
+        background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.8), 
+        rgba($color-primary-dark, 0.8)), 
+        url(../img/nat-4-small.jpg);
+        background-size: cover;
+    }
 
     transform: skewY(-7deg);
 
@@ -54,17 +64,25 @@
 }
 
 .book {
-    background-image: linear-gradient(105deg, rgba($color-white, .9) 50%, transparent 50%), url(../img/nat-10.jpg);
+    background-image: linear-gradient(105deg, rgba($color-white, .9) 50%, transparent 50%), url(../img/nat-10-small.jpg);
     background-size: cover;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
 
+    @media (min-resolution: 192dpi) and (min-width: 600px),
+           (min-width: 1800px) {
+        background-image: linear-gradient(105deg, rgba($color-white, .9) 50%, transparent 50%), url(../img/nat-10.jpg);
+    }
+
     @include respond(tab-land) {
-        background-image: linear-gradient(105deg, rgba($color-white, .9) 65%, transparent 65%), url(../img/nat-10.jpg);
+        @media (min-resolution: 192dpi) {
+            background-image: linear-gradient(105deg, rgba($color-white, .9) 65%, transparent 65%), url(../img/nat-10.jpg);
+        }
+        background-image: linear-gradient(105deg, rgba($color-white, .9) 65%, transparent 65%), url(../img/nat-10-small.jpg);
     }
 
     @include respond(tab-port) {
-        background-image: linear-gradient(rgba($color-white, .9), rgba($color-white, .9)), url(../img/nat-10.jpg);
+        background-image: linear-gradient(rgba($color-white, .9), rgba($color-white, .9)), url(../img/nat-10-small.jpg);
     }
 
     &__form {
