--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -23,13 +23,19 @@
         width: 15rem;
         height: 15rem;
         float: left;
-        clip-path: circle(50% at 50% 50%);
-        transform: translateX(-3rem) skewX(12deg);
-        -webkit-shape-outside: circle(50% at 50% 50%);
-        shape-outside: circle(50% at 50% 50%);
+        border-radius: 50%;
+        overflow: hidden;
+        transform: translateX(-3rem) skewX(12deg);   
         position: relative;
         overflow: hidden;
         backface-visibility: hidden;   
+
+        @supports(clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+            clip-path: circle(50% at 50% 50%);
+            -webkit-shape-outside: circle(50% at 50% 50%);
+            shape-outside: circle(50% at 50% 50%);
+            border-radius: none;
+        }
 
         @include respond(phone) {  
             transform:translateX(-3rem) skewX(0);
