--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -18,9 +18,9 @@
         url(../img/nat-4-small.jpg);
         background-size: cover;
 
-    @media (min-resolution: 192dpi) and (min-width: 37.5em),
-           (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-           (min-width: 2000px) {
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+           only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+           only screen and (min-width: 2000px) {
         background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.8), 
@@ -70,15 +70,15 @@
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
 
-    @media (min-resolution: 192dpi) and (min-width: 37.5em),
-           (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-           (min-width: 1800px) {
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+           only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+           only screen and (min-width: 1800px) {
         background-image: linear-gradient(105deg, rgba($color-white, .9) 50%, transparent 50%), url(../img/nat-10.jpg);
     }
 
     @include respond(tab-land) {
-        @media (min-resolution: 192dpi),
-               (-webkit-min-device-pixel-ratio: 2) {
+        @media only screen and (min-resolution: 192dpi),
+               only screen and (-webkit-min-device-pixel-ratio: 2) {
             background-image: linear-gradient(105deg, rgba($color-white, .9) 65%, transparent 65%), url(../img/nat-10.jpg);
         }
         background-image: linear-gradient(105deg, rgba($color-white, .9) 65%, transparent 65%), url(../img/nat-10-small.jpg);
